# SDL3-C-implementations

./: .clang-format  .clangd  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: circle.c  circle.h  constants.c  constants.h  draw.c  draw.h  game.c  game.h  helper.c  helper.h  linalg.c  linalg.h  main.c  main.h  render.c  render.h  shader.glsl.frag  shader.glsl.vert  shader.spv.frag  shader.spv.vert  storage.c  storage.h
